fix archive and remove from list

--- a/StackdVersion1/Base.lproj/Main.storyboard
+++ b/StackdVersion1/Base.lproj/Main.storyboard
@@ -133,10 +133,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TDK-pY-5Ir">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="regularcell" rowHeight="120" id="w7w-6T-aG6" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="regularcell" rowHeight="120" id="w7w-6T-aG6" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w7w-6T-aG6" id="xhn-Eg-vOT">
@@ -144,7 +144,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="youtubecell" rowHeight="120" id="vt9-zh-6jv" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="youtubecell" rowHeight="120" id="vt9-zh-6jv" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="148" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vt9-zh-6jv" id="89m-Zl-bnn">
@@ -233,7 +233,7 @@
                         <constraints>
                             <constraint firstItem="7dS-hr-pHl" firstAttribute="bottom" secondItem="TDK-pY-5Ir" secondAttribute="bottom" id="IuP-BR-6OA"/>
                             <constraint firstItem="uCq-Yg-xw1" firstAttribute="centerX" secondItem="2tz-fk-2Xt" secondAttribute="centerX" constant="1000" id="bDF-zR-YpO"/>
-                            <constraint firstItem="TDK-pY-5Ir" firstAttribute="top" secondItem="2tz-fk-2Xt" secondAttribute="top" id="dW9-hs-1Xn"/>
+                            <constraint firstItem="TDK-pY-5Ir" firstAttribute="top" secondItem="7dS-hr-pHl" secondAttribute="top" id="dW9-hs-1Xn"/>
                             <constraint firstItem="7dS-hr-pHl" firstAttribute="trailing" secondItem="TDK-pY-5Ir" secondAttribute="trailing" id="ssh-ab-jfS"/>
                             <constraint firstItem="TDK-pY-5Ir" firstAttribute="leading" secondItem="7dS-hr-pHl" secondAttribute="leading" id="v4b-wd-S8m"/>
                             <constraint firstItem="7dS-hr-pHl" firstAttribute="bottom" secondItem="uCq-Yg-xw1" secondAttribute="bottom" id="yMR-fR-dyt"/>
@@ -266,7 +266,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="regularcell" rowHeight="120" id="q4g-we-tgO" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="regularcell" rowHeight="120" id="q4g-we-tgO" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="q4g-we-tgO" id="4ir-Id-r7I">
@@ -274,7 +274,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="youtubecell" rowHeight="120" id="V9v-rE-22S" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" shouldIndentWhileEditing="NO" reuseIdentifier="youtubecell" rowHeight="120" id="V9v-rE-22S" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="148" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="V9v-rE-22S" id="jnD-Ue-VPk">
@@ -373,7 +373,10 @@
                     </view>
                     <navigationItem key="navigationItem" id="xWK-ZG-nae"/>
                     <connections>
+                        <outlet property="archiveBtn" destination="xof-8E-bHl" id="S4i-aD-1qN"/>
+                        <outlet property="backFromPopupView" destination="FOf-cM-sfu" id="tjy-AW-gBi"/>
                         <outlet property="centerX" destination="ZDu-0N-jtv" id="RjK-VK-NjU"/>
+                        <outlet property="deleteBtn" destination="CvK-e3-54R" id="bxe-JD-5pC"/>
                         <outlet property="tableView" destination="O97-S1-qyq" id="c9v-sL-361"/>
                         <segue destination="Rch-Uj-Fwe" kind="show" id="xKc-rp-dgb"/>
                     </connections>
@@ -391,10 +394,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="XCM-n2-u7s">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="regularcell" rowHeight="120" id="yEB-as-zbr" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="regularcell" rowHeight="120" id="yEB-as-zbr" customClass="SharedTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yEB-as-zbr" id="YCo-iw-sxx">
@@ -402,7 +405,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="youtubecell" rowHeight="120" id="mP6-rz-S48" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="youtubecell" rowHeight="120" id="mP6-rz-S48" customClass="YoutubeTableViewCell" customModule="StackdVersion1" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="148" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="mP6-rz-S48" id="HIK-TD-Xx1">
@@ -419,7 +422,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="XCM-n2-u7s" firstAttribute="top" secondItem="pk1-Ht-bQn" secondAttribute="top" id="2SV-5m-Xw9"/>
+                            <constraint firstItem="XCM-n2-u7s" firstAttribute="top" secondItem="jio-8G-QDa" secondAttribute="top" id="2SV-5m-Xw9"/>
                             <constraint firstItem="XCM-n2-u7s" firstAttribute="leading" secondItem="jio-8G-QDa" secondAttribute="leading" id="Abc-eV-Y99"/>
                             <constraint firstItem="jio-8G-QDa" firstAttribute="bottom" secondItem="XCM-n2-u7s" secondAttribute="bottom" id="RPN-cI-JwJ"/>
                             <constraint firstAttribute="trailing" secondItem="XCM-n2-u7s" secondAttribute="trailing" id="RyE-eb-Iat"/>
